--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,7 @@ body {
 .ImageGroup .ImageGroupTextDark
 {
 	position: absolute;
-	top: 35%;
+	top: 25%;
 	left:0%;
 	right:0;
 	bottom:0; 
@@ -57,4 +57,11 @@ body {
 	font-weight: bold;
 
 
+}
+.PortfolioImage
+{
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
+    
 }
